@@ -130,7 +130,7 @@ spt3++; if(spt3 == rpt3) spt3 = 0;
 #define MASTER_CHORUS_LEVEL 1.7
 #define MASTER_DELAY_LEVEL 3.25
 
-void do_shelving_filter(register int32 *, int32, int32 *, int32 *);
+static void do_shelving_filter(register int32 *, int32, int32 *, int32 *);
 static void do_freeverb(int32 *buf, int32 count);
 static void alloc_revmodel(void);
 
@@ -224,7 +224,7 @@ void set_ch_reverb(int32 *buf, int32 count, int32 level)
 void set_ch_reverb(register int32 *sbuffer, int32 n, int32 level)
 {
     register int32  i;
-    FLOAT_T send_level = (FLOAT_T)level / 127.0 * reverb_status.level_ratio * REV_INP_LEV;
+    FLOAT_T send_level = (FLOAT_T)level / 127.0 * REV_INP_LEV;
 	
 	for(i = 0; i < n; i++)
     {
@@ -336,8 +336,9 @@ void do_standard_reverb(int32 *comp, int32 n)
 
 void do_ch_reverb(int32* buf, int32 count)
 {
+	int i;
 	if((opt_reverb_control == 3 || opt_effect_quality >= 1) && reverb_status.pre_lpf) {
-		do_shelving_filter(buf, count, reverb_status.high_coef, reverb_status.high_val);
+		do_shelving_filter(effect_buffer, count, reverb_status.high_coef, reverb_status.high_val);
 	}
 	if(opt_reverb_control == 3 || opt_effect_quality >= 2) {
 		do_freeverb(buf, count);
@@ -931,7 +932,7 @@ void set_ch_chorus(register int32 *sbuffer,int32 n, int32 level)
 void do_ch_chorus(int32* buf, int32 count)
 {
 	if((opt_reverb_control == 3 || opt_effect_quality >= 1) && chorus_param.chorus_pre_lpf) {
-		do_lowpass_24db(chorus_effect_buffer, count, chorus_param.high_coef, chorus_param.high_val);
+		do_shelving_filter(chorus_effect_buffer, count, chorus_param.high_coef, chorus_param.high_val);
 	}
 	do_stereo_chorus(buf, count);
 }
@@ -950,21 +951,15 @@ void init_eq()
 	memset(eq_status.high_val, 0, sizeof(eq_status.high_val));
 }
 
-void calc_lowshelf_coefs(int32* coef,int32 cutoff_freq,FLOAT_T dbGain,int32 rate)
+void calc_lowshelf_coefs(int32* coef, int32 cutoff_freq, FLOAT_T dbGain, int32 rate)
 {
-	FLOAT_T a0,a1,a2,b0,b1,b2,omega,sn,cs,A,beta,S;
-	FLOAT_T max_dbGain = 12;
+	FLOAT_T a0, a1, a2, b0, b1, b2, omega, sn, cs, A, beta;
 
-	memset(coef, 0, sizeof(coef));
-
-	if(dbGain > max_dbGain) {dbGain = max_dbGain;}
-
-	S = 1;
 	A = pow(10, dbGain / 40);
 	omega = 2.0 * M_PI * (FLOAT_T)cutoff_freq / (FLOAT_T)rate;
 	sn = sin(omega);
 	cs = cos(omega);
-	beta = sqrt((A * A + 1.0) / S - (A - 1) * (A - 1));
+	beta = sqrt(A + A);
 
 	a0 = 1.0 / ((A + 1) + (A - 1) * cs + beta * sn);
 	a1 = 2.0 * ((A - 1) + (A + 1) * cs);
@@ -986,24 +981,18 @@ void calc_lowshelf_coefs(int32* coef,int32 cutoff_freq,FLOAT_T dbGain,int32 rate
 	coef[4] = TIM_FSCALE(b2, 24);
 }
 
-void calc_highshelf_coefs(int32* coef,int32 cutoff_freq,FLOAT_T dbGain,int32 rate)
+void calc_highshelf_coefs(int32* coef, int32 cutoff_freq, FLOAT_T dbGain, int32 rate)
 {
-	FLOAT_T a0,a1,a2,b0,b1,b2,omega,sn,cs,A,beta,S;
-	FLOAT_T max_dbGain = 12;
+	FLOAT_T a0, a1, a2, b0, b1, b2, omega, sn, cs, A, beta;
 
-	memset(coef, 0, sizeof(coef));
-
-	if(dbGain > max_dbGain) {dbGain = max_dbGain;}
-
-	S = 1;
 	A = pow(10, dbGain / 40);
 	omega = 2.0 * M_PI * (FLOAT_T)cutoff_freq / (FLOAT_T)rate;
 	sn = sin(omega);
 	cs = cos(omega);
-	beta = sqrt((A * A + 1.0) / S - (A - 1) * (A - 1));
+	beta = sqrt(A + A);
 
-	a0 = 1.0 /((A + 1) - (A - 1) * cs + beta * sn);
-	a1 = -2 * ((A - 1) - (A + 1) * cs);
+	a0 = 1.0 / ((A + 1) - (A - 1) * cs + beta * sn);
+	a1 = (-2 * ((A - 1) - (A + 1) * cs));
 	a2 = -((A + 1) - (A - 1) * cs - beta * sn);
 	b0 = A * ((A + 1) + (A - 1) * cs + beta * sn);
 	b1 = -2 * A * ((A - 1) + (A + 1) * cs);
@@ -1011,9 +1000,9 @@ void calc_highshelf_coefs(int32* coef,int32 cutoff_freq,FLOAT_T dbGain,int32 rat
 
 	a1 *= a0;
 	a2 *= a0;
+	b0 *= a0;
 	b1 *= a0;
 	b2 *= a0;
-	b0 *= a0;
 
 	coef[0] = TIM_FSCALE(a1, 24);
 	coef[1] = TIM_FSCALE(a2, 24);
@@ -1023,21 +1012,18 @@ void calc_highshelf_coefs(int32* coef,int32 cutoff_freq,FLOAT_T dbGain,int32 rat
 }
 
 
-void do_shelving_filter(register int32* buf, int32 count, int32* eq_coef, int32* eq_val)
+static void do_shelving_filter(register int32* buf, int32 count, int32* eq_coef, int32* eq_val)
 {
 #if OPT_MODE != 0
 	register int32 i;
-	int32 length;
-	int32 x1l,x2l,y1l,y2l,x1r,x2r,y1r,y2r,yout;
-	int32 a1,a2,b0,b1,b2;
+	int32 x1l, x2l, y1l, y2l, x1r, x2r, y1r, y2r, yout;
+	int32 a1, a2, b0, b1, b2;
 
 	a1 = eq_coef[0];
 	a2 = eq_coef[1];
 	b0 = eq_coef[2];
 	b1 = eq_coef[3];
 	b2 = eq_coef[4];
-
-	length = count;
 
 	x1l = eq_val[0];
 	x2l = eq_val[1];
@@ -1048,15 +1034,15 @@ void do_shelving_filter(register int32* buf, int32 count, int32* eq_coef, int32*
 	y1r = eq_val[6];
 	y2r = eq_val[7];
 
-	for(i=0;i<length;i++) {
-		yout = imuldiv24(buf[i],b0) + imuldiv24(x1l,b1) + imuldiv24(x2l,b2) + imuldiv24(y1l,a1) + imuldiv24(y2l,a2);
+	for(i=0;i<count;i++) {
+		yout = imuldiv24(buf[i], b0) + imuldiv24(x1l, b1) + imuldiv24(x2l, b2) + imuldiv24(y1l, a1) + imuldiv24(y2l, a2);
 		x2l = x1l;
 		x1l = buf[i];
 		y2l = y1l;
 		y1l = yout;
 		buf[i] = yout;
 
-		yout = imuldiv24(buf[++i],b0) + imuldiv24(x1r,b1) + imuldiv24(x2r,b2) + imuldiv24(y1r,a1) + imuldiv24(y2r,a2);
+		yout = imuldiv24(buf[++i], b0) + imuldiv24(x1r, b1) + imuldiv24(x2r, b2) + imuldiv24(y1r, a1) + imuldiv24(y2r, a2);
 		x2r = x1r;
 		x1r = buf[i];
 		y2r = y1r;
@@ -1515,11 +1501,7 @@ static double gs_revchar_to_roomsize(int character)
 	case 4: rs = 0.85;	break;	/* Hall 2 */
 	default: rs = 1.0;	break;	/* Plate, Delay, Panning Delay */
 	}
-/*	if(opt_effect_quality > 2) {
-		return (double)(opt_effect_quality - 2) / 100.0;
-	} else {*/
-		return rs;
-/*	}*/
+	return rs;
 }
 
 static double gs_revchar_to_level(int character)
@@ -1623,7 +1605,7 @@ static void recalc_reverb_buffer(revmodel_t *rev)
 static void update_revmodel(revmodel_t *rev)
 {
 	int i;
-	double allpassfbk = gs_revchar_to_apfbk(reverb_status.character);
+	double allpassfbk = gs_revchar_to_apfbk(reverb_status.character), rtbase;
 
 	rev->wet = (double)reverb_status.level / 127.0 * gs_revchar_to_level(reverb_status.character);
 	rev->roomsize = gs_revchar_to_roomsize(reverb_status.character) * scaleroom + offsetroom;
@@ -1635,10 +1617,12 @@ static void update_revmodel(revmodel_t *rev)
 	rev->damp1 = rev->damp;
 
 	recalc_reverb_buffer(rev);
+	rtbase = 1.0 / (44100.0 * reverb_time_table[reverb_status.time] * gs_revchar_to_rt(reverb_status.character));
+
 	for(i = 0; i < numcombs; i++)
 	{
-		rev->combL[i].feedback = pow(10, -3 * (double)combtunings[i] / 44100.0 / reverb_time_table[reverb_status.time]);
-		rev->combR[i].feedback = pow(10, -3 * (double)(combtunings[i] /*+ stereospread*/) / 44100.0 / reverb_time_table[reverb_status.time]);
+		rev->combL[i].feedback = pow(10, -3 * (double)combtunings[i] * rtbase);
+		rev->combR[i].feedback = pow(10, -3 * (double)(combtunings[i] /*+ stereospread*/) * rtbase);
 		rev->combL[i].damp1 = rev->damp1;
 		rev->combR[i].damp1 = rev->damp1;
 		rev->combL[i].damp2 = 1 - rev->damp1;
@@ -1785,7 +1769,13 @@ static void do_freeverb(int32 *buf, int32 count)
 	comb *combL = rev->combL, *combR = rev->combR;
 	allpass *allpassL = rev->allpassL, *allpassR = rev->allpassR;
 
-	if(rev == NULL) {return;}
+	if(rev == NULL) {
+		for (k = 0; k < count; k++)
+		{
+			effect_buffer[k] = 0;
+		}
+		return;
+	}
 
 	for (k = 0; k < count; k++)
 	{
@@ -1838,7 +1828,13 @@ static void do_freeverb(int32 *buf, int32 count)
 	int32 outl, outr, input;
 	revmodel_t *rev = revmodel;
 
-	if(rev == NULL) {return;}
+	if(rev == NULL) {
+		for (k = 0; k < count; k++)
+		{
+			effect_buffer[k] = 0;
+		}
+		return;
+	}
 
 	for (k = 0; k < count; k++)
 	{
